Самая ранняя версия

--- a/v4.html
+++ b/v4.html
@@ -31,8 +31,9 @@
                         <h1 class="title contur">Добро пожаловать в исследовательский комплекс BLACK MESA</h1>
                         <img class="pic" src="/images/BlackMesa.png" alt="">
                     </section>
-                    <h2>
-                        Black Mesa — «Чёрная столовая гора») — американская исследовательская корпорация, штаб-квартира которой расположена в Научно-исследовательском комплексе Чёрная Меза в пустыне Нью-Мексико.
+                    <h2 class="contur">
+                        Black Mesa — «Чёрная столовая гора») — американская исследовательская корпорация, штаб-квартира
+                        которой расположена в Научно-исследовательском комплексе Чёрная Меза в пустыне Нью-Мексико.
                     </h2>
                 </section>
             </section>
@@ -41,12 +42,23 @@
         <section class="quote">
                 <div>
                     <img src="/images/brin.jpg"  alt="">
-                    <h3 style="text-align: center"> Уолесс Бринн</h3>
+                    <h3 style="text-align: center" class="contur"> Уолесс Бринн</h3>
                 </div>
-                <h3 class="center-div"><i> "Добро пожаловать в исследовательский комплекс BLACK MESA. Сами вы его выбрали
+                <h3 class="center-div contur"><i> "Добро пожаловать в исследовательский комплекс BLACK MESA. Сами вы его выбрали
                     или его выбрали за вас — это лучший комплекс из оставшихся. Я такого высокого мнения о BLACK MESA, что
-                    решил разместить свою администрацию здесь, в корпусе Lambda, столь заботливо предоставленной нашими Покровителями.
+                    решил разместить свою администрацию здесь, в секторе D, столь заботливо предоставленной нашими Покровителями.
                     Я горжусь тем, что называю BLACK MESA своим домом."</i> </h3>
+        </section>
+
+        <section class="scientists">
+            <div class="pic">
+                <img src="images  alt="">
+                <h3 style="text-align: center" class="contur"> Уолесс Бринн</h3>
+            </div>
+            <h3 class="center-div contur"><i> "Добро пожаловать в исследовательский комплекс BLACK MESA. Сами вы его выбрали
+                или его выбрали за вас — это лучший комплекс из оставшихся. Я такого высокого мнения о BLACK MESA, что
+                решил разместить свою администрацию здесь, в секторе D, столь заботливо предоставленной нашими Покровителями.
+                Я горжусь тем, что называю BLACK MESA своим домом."</i> </h3>
         </section>
     </main>
 </img>
