Самая ранняя версия

--- a/v4.html
+++ b/v4.html
@@ -51,8 +51,8 @@
         </section>
 
         <section class="scientists">
-            <div class="pic">
-                <img src="images  alt="">
+            <div>
+                <img class="pic" src="/images/singularity.jpg"  alt="">
                 <h3 style="text-align: center" class="contur"> Уолесс Бринн</h3>
             </div>
             <h3 class="center-div contur"><i> "Добро пожаловать в исследовательский комплекс BLACK MESA. Сами вы его выбрали
